-- ============================================================================
-- F15 - Reverso de Cobro de Cuota - workflow con aprobacion (4 ojos)
-- ============================================================================
-- Implementa PLAN_REVERSO_COBRO.md. Permite revertir un cobro de cuota ya
-- aplicado (FN_COBRAR_CUOTA de F9). Destraba dos flujos hoy bloqueados:
--   - F11 (anulacion): no se puede anular factura credito con cuota PAGADA.
--   - F14 (NC): NC de credito se capa al saldo; si excede lo cobrado -> -20982.
--
-- Decisiones (con el PO, 2026-06-24, ver plan §3):
--   1. Workflow con aprobacion: SOLICITA -> APRUEBA (efectos) / RECHAZA.
--   2. EGRESO en la caja abierta del dia del APROBADOR (espejo F11/F14).
--   3. La solicitud no toca caja ni CxC; solo al aprobar se materializan efectos.
--   4. Se conserva el recibo (nro RC quemado, no se decrementa el talonario).
--   5. Guard anti doble-reverso (indice unico parcial + re-check al aprobar).
--   6. Cuota reactivada -> VENCIDA si la fecha ya paso, si no PENDIENTE.
--
-- El EGRESO no lleva campos de recibo (quedan NULL) -> cumple CK_MOVCAJA_RECIBO.
-- CERRAR_CAJA v2 ya resta TIPO='EGRESO' del cierre del dia.
--
-- Rango de error reservado: -20991 .. -20999.
-- Idempotente: re-correrlo es no-op.
-- Pre-requisitos: F8 (MOVIMIENTOS_CAJA, FN_CAJA_ABIERTA_USUARIO) y F9
-- (FN_COBRAR_CUOTA, CUENTAS_COBRAR_DET con estados) aplicados.
--
-- Conexion: SQLCL_CONNECTION=tesis_db
-- Ejecucion: sql -S -name tesis_db @db/F15_reverso_cobro.sql
-- ============================================================================

ALTER SESSION SET CURRENT_SCHEMA = WKSP_WORKPLACE;

set serveroutput on size unlimited
set define off
whenever sqlerror exit sql.sqlcode rollback

prompt == F15.0 Pre-check (F8/F9 aplicados) ==
DECLARE
  v_cnt PLS_INTEGER;
BEGIN
  SELECT COUNT(*) INTO v_cnt FROM all_tables
   WHERE owner='WKSP_WORKPLACE' AND table_name='MOVIMIENTOS_CAJA';
  IF v_cnt = 0 THEN RAISE_APPLICATION_ERROR(-20991,'Falta MOVIMIENTOS_CAJA (F8).'); END IF;

  SELECT COUNT(*) INTO v_cnt FROM all_objects
   WHERE owner='WKSP_WORKPLACE' AND object_name='FN_CAJA_ABIERTA_USUARIO'
     AND object_type='FUNCTION' AND status='VALID';
  IF v_cnt = 0 THEN RAISE_APPLICATION_ERROR(-20991,'Falta FN_CAJA_ABIERTA_USUARIO (F8).'); END IF;

  SELECT COUNT(*) INTO v_cnt FROM all_objects
   WHERE owner='WKSP_WORKPLACE' AND object_name='FN_COBRAR_CUOTA'
     AND object_type='FUNCTION' AND status='VALID';
  IF v_cnt = 0 THEN RAISE_APPLICATION_ERROR(-20991,'Falta FN_COBRAR_CUOTA (F9).'); END IF;

  DBMS_OUTPUT.PUT_LINE('  = Pre-check OK');
END;
/

prompt == F15.1 Columna MOVIMIENTOS_CAJA.ID_MOVIMIENTO_REVERSADO + FK ==
-- Solo la llena la fila EGRESO de reversion, apuntando al COBRO_CXC original.
DECLARE
  v_cnt PLS_INTEGER;
BEGIN
  SELECT COUNT(*) INTO v_cnt FROM all_tab_columns
   WHERE owner='WKSP_WORKPLACE' AND table_name='MOVIMIENTOS_CAJA'
     AND column_name='ID_MOVIMIENTO_REVERSADO';
  IF v_cnt = 0 THEN
    EXECUTE IMMEDIATE
      'ALTER TABLE WKSP_WORKPLACE.MOVIMIENTOS_CAJA ADD (ID_MOVIMIENTO_REVERSADO NUMBER)';
    DBMS_OUTPUT.PUT_LINE('  + ID_MOVIMIENTO_REVERSADO agregada');
  ELSE
    DBMS_OUTPUT.PUT_LINE('  = ID_MOVIMIENTO_REVERSADO ya existe');
  END IF;

  SELECT COUNT(*) INTO v_cnt FROM all_constraints
   WHERE owner='WKSP_WORKPLACE' AND constraint_name='FK_MOVCAJA_REVERSA';
  IF v_cnt = 0 THEN
    EXECUTE IMMEDIATE
      'ALTER TABLE WKSP_WORKPLACE.MOVIMIENTOS_CAJA
         ADD CONSTRAINT FK_MOVCAJA_REVERSA
         FOREIGN KEY (ID_MOVIMIENTO_REVERSADO)
         REFERENCES WKSP_WORKPLACE.MOVIMIENTOS_CAJA(ID_MOVIMIENTO)';
    DBMS_OUTPUT.PUT_LINE('  + FK_MOVCAJA_REVERSA creada');
  ELSE
    DBMS_OUTPUT.PUT_LINE('  = FK_MOVCAJA_REVERSA ya existe');
  END IF;
END;
/

prompt == F15.2 Tabla SOLICITUDES_REVERSO_COBRO (staging) ==
DECLARE
  v_cnt PLS_INTEGER;
BEGIN
  SELECT COUNT(*) INTO v_cnt FROM all_tables
   WHERE owner='WKSP_WORKPLACE' AND table_name='SOLICITUDES_REVERSO_COBRO';
  IF v_cnt = 0 THEN
    EXECUTE IMMEDIATE q'[
      CREATE TABLE WKSP_WORKPLACE.SOLICITUDES_REVERSO_COBRO (
        ID_SOLICITUD_RC      NUMBER GENERATED BY DEFAULT AS IDENTITY,
        ID_MOVIMIENTO        NUMBER       NOT NULL,   -- el cobro COBRO_CXC a revertir
        MOTIVO               VARCHAR2(500) NOT NULL,
        ESTADO               CHAR(1) DEFAULT 'P' NOT NULL,
        USUARIO_SOLICITA     VARCHAR2(60) NOT NULL,
        FECHA_SOLICITUD      DATE         NOT NULL,
        USUARIO_APRUEBA      VARCHAR2(60),
        FECHA_RESOLUCION     DATE,
        MOTIVO_RECHAZO       VARCHAR2(500),
        ID_MOVIMIENTO_EGRESO NUMBER,                  -- EGRESO generado al aprobar
        CONSTRAINT PK_SOLICITUD_RC PRIMARY KEY (ID_SOLICITUD_RC),
        CONSTRAINT FK_SRC_COBRO  FOREIGN KEY (ID_MOVIMIENTO)
          REFERENCES WKSP_WORKPLACE.MOVIMIENTOS_CAJA(ID_MOVIMIENTO),
        CONSTRAINT FK_SRC_EGRESO FOREIGN KEY (ID_MOVIMIENTO_EGRESO)
          REFERENCES WKSP_WORKPLACE.MOVIMIENTOS_CAJA(ID_MOVIMIENTO),
        CONSTRAINT CK_SRC_ESTADO CHECK (ESTADO IN ('P','A','R'))
      )]';
    DBMS_OUTPUT.PUT_LINE('  + Tabla SOLICITUDES_REVERSO_COBRO creada');
  ELSE
    DBMS_OUTPUT.PUT_LINE('  = SOLICITUDES_REVERSO_COBRO ya existe');
  END IF;
END;
/

prompt == F15.3 Indice unico parcial (1 sola solicitud pendiente por cobro) ==
DECLARE
  v_cnt PLS_INTEGER;
BEGIN
  SELECT COUNT(*) INTO v_cnt FROM all_indexes
   WHERE owner='WKSP_WORKPLACE' AND index_name='UQ_SRC_MOV_PEND';
  IF v_cnt = 0 THEN
    EXECUTE IMMEDIATE
      'CREATE UNIQUE INDEX WKSP_WORKPLACE.UQ_SRC_MOV_PEND
         ON WKSP_WORKPLACE.SOLICITUDES_REVERSO_COBRO
         (CASE WHEN ESTADO=''P'' THEN ID_MOVIMIENTO END)';
    DBMS_OUTPUT.PUT_LINE('  + UQ_SRC_MOV_PEND creado');
  ELSE
    DBMS_OUTPUT.PUT_LINE('  = UQ_SRC_MOV_PEND ya existe');
  END IF;
END;
/

prompt == F15.4 FN_COBRO_REVERSABLE (bloqueos; NULL = se puede reversar) ==
CREATE OR REPLACE FUNCTION WKSP_WORKPLACE.FN_COBRO_REVERSABLE (
  p_id_movimiento IN NUMBER
) RETURN VARCHAR2 IS
  v_mov    WKSP_WORKPLACE.MOVIMIENTOS_CAJA%ROWTYPE;
  v_cnt    PLS_INTEGER;
  v_estcuo WKSP_WORKPLACE.CUENTAS_COBRAR_DET.ESTADO%TYPE;
  v_estcxc WKSP_WORKPLACE.CUENTAS_COBRAR.ESTADO%TYPE;
BEGIN
  BEGIN
    SELECT * INTO v_mov FROM WKSP_WORKPLACE.MOVIMIENTOS_CAJA
     WHERE ID_MOVIMIENTO = p_id_movimiento;
  EXCEPTION WHEN NO_DATA_FOUND THEN
    RETURN 'El movimiento de caja indicado no existe.';
  END;

  IF v_mov.TIPO <> 'COBRO_CXC' THEN
    RETURN 'Solo se puede reversar un cobro de cuota (movimiento de tipo COBRO_CXC).';
  END IF;

  -- Ya reversado (solicitud aprobada) o con EGRESO de reversion ligado
  SELECT COUNT(*) INTO v_cnt FROM WKSP_WORKPLACE.SOLICITUDES_REVERSO_COBRO
   WHERE ID_MOVIMIENTO = p_id_movimiento AND ESTADO = 'A';
  IF v_cnt > 0 THEN
    RETURN 'Este cobro ya fue reversado.';
  END IF;
  SELECT COUNT(*) INTO v_cnt FROM WKSP_WORKPLACE.MOVIMIENTOS_CAJA
   WHERE ID_MOVIMIENTO_REVERSADO = p_id_movimiento;
  IF v_cnt > 0 THEN
    RETURN 'Este cobro ya tiene un egreso de reversion registrado.';
  END IF;

  -- Solicitud pendiente en curso
  SELECT COUNT(*) INTO v_cnt FROM WKSP_WORKPLACE.SOLICITUDES_REVERSO_COBRO
   WHERE ID_MOVIMIENTO = p_id_movimiento AND ESTADO = 'P';
  IF v_cnt > 0 THEN
    RETURN 'Ya existe una solicitud de reverso pendiente para este cobro.';
  END IF;

  -- Cuota / CxC asociada no debe estar anulada
  IF v_mov.ID_CUENTA_COBRAR_DET IS NOT NULL THEN
    BEGIN
      SELECT cd.ESTADO, cx.ESTADO INTO v_estcuo, v_estcxc
        FROM WKSP_WORKPLACE.CUENTAS_COBRAR_DET cd
        JOIN WKSP_WORKPLACE.CUENTAS_COBRAR     cx ON cx.ID_CXC = cd.ID_CXC
       WHERE cd.ID_DETALLE = v_mov.ID_CUENTA_COBRAR_DET;
      IF v_estcuo = 'ANULADA' OR v_estcxc = 'ANULADA' THEN
        RETURN 'La cuota o la cuenta por cobrar asociada esta anulada; no se puede reversar el cobro.';
      END IF;
    EXCEPTION WHEN NO_DATA_FOUND THEN
      RETURN 'No se encontro la cuota asociada al cobro.';
    END;
  END IF;

  RETURN NULL; -- reversable
END FN_COBRO_REVERSABLE;
/
show errors function FN_COBRO_REVERSABLE

prompt == F15.5 PRC_SOLICITAR_REVERSO_COBRO (crea solicitud 'P') ==
CREATE OR REPLACE PROCEDURE WKSP_WORKPLACE.PRC_SOLICITAR_REVERSO_COBRO (
  p_id_movimiento IN  NUMBER,
  p_motivo        IN  VARCHAR2,
  p_usuario       IN  VARCHAR2,
  p_id_solicitud  OUT NUMBER
) IS
  v_bloqueo VARCHAR2(500);
BEGIN
  IF p_usuario IS NULL THEN
    RAISE_APPLICATION_ERROR(-20997,'Usuario solicitante requerido.');
  END IF;
  IF p_motivo IS NULL OR LENGTH(TRIM(p_motivo)) < 10 THEN
    RAISE_APPLICATION_ERROR(-20992,'El motivo del reverso debe tener al menos 10 caracteres.');
  END IF;

  v_bloqueo := WKSP_WORKPLACE.FN_COBRO_REVERSABLE(p_id_movimiento);
  IF v_bloqueo IS NOT NULL THEN
    RAISE_APPLICATION_ERROR(-20991, v_bloqueo);
  END IF;

  INSERT INTO WKSP_WORKPLACE.SOLICITUDES_REVERSO_COBRO (
    ID_MOVIMIENTO, MOTIVO, ESTADO, USUARIO_SOLICITA, FECHA_SOLICITUD
  ) VALUES (
    p_id_movimiento, TRIM(p_motivo), 'P', p_usuario, WKSP_WORKPLACE.FN_AHORA
  ) RETURNING ID_SOLICITUD_RC INTO p_id_solicitud;
END PRC_SOLICITAR_REVERSO_COBRO;
/
show errors procedure PRC_SOLICITAR_REVERSO_COBRO

prompt == F15.6 PRC_APROBAR_REVERSO_COBRO (materializa el reverso) ==
CREATE OR REPLACE PROCEDURE WKSP_WORKPLACE.PRC_APROBAR_REVERSO_COBRO (
  p_id_solicitud IN NUMBER,
  p_usuario      IN VARCHAR2
) IS
  v_s        WKSP_WORKPLACE.SOLICITUDES_REVERSO_COBRO%ROWTYPE;
  v_mov      WKSP_WORKPLACE.MOVIMIENTOS_CAJA%ROWTYPE;
  v_cuota    WKSP_WORKPLACE.CUENTAS_COBRAR_DET%ROWTYPE;
  v_cxc      WKSP_WORKPLACE.CUENTAS_COBRAR%ROWTYPE;
  v_n        PLS_INTEGER;
  v_ecuo     WKSP_WORKPLACE.CUENTAS_COBRAR_DET.ESTADO%TYPE;
  v_ecxc     WKSP_WORKPLACE.CUENTAS_COBRAR.ESTADO%TYPE;
  v_id_caja  NUMBER;
  v_fec_caja DATE;
  v_id_egreso NUMBER;
  v_nuevo_saldo NUMBER;
  v_nro_rec  VARCHAR2(40);
BEGIN
  IF p_usuario IS NULL THEN
    RAISE_APPLICATION_ERROR(-20997,'Usuario aprobador requerido.');
  END IF;

  -- 1) Lock solicitud, debe estar pendiente
  SELECT * INTO v_s FROM WKSP_WORKPLACE.SOLICITUDES_REVERSO_COBRO
   WHERE ID_SOLICITUD_RC = p_id_solicitud FOR UPDATE;
  IF v_s.ESTADO <> 'P' THEN
    RAISE_APPLICATION_ERROR(-20996,'La solicitud no esta pendiente (ESTADO='||v_s.ESTADO||').');
  END IF;

  -- 2) Lock del cobro original y re-validar (concurrencia).
  -- NO se usa FN_COBRO_REVERSABLE aca: incluye el chequeo de "solicitud P", que
  -- aqui es justamente la solicitud en curso. Se re-chequean solo los guards
  -- duros: que no haya sido reversado por otra via y que la cuota/CxC no este anulada.
  SELECT * INTO v_mov FROM WKSP_WORKPLACE.MOVIMIENTOS_CAJA
   WHERE ID_MOVIMIENTO = v_s.ID_MOVIMIENTO FOR UPDATE;

  IF v_mov.TIPO <> 'COBRO_CXC' THEN
    RAISE_APPLICATION_ERROR(-20991,'El movimiento a reversar no es un cobro (COBRO_CXC).');
  END IF;
  SELECT COUNT(*) INTO v_n FROM WKSP_WORKPLACE.SOLICITUDES_REVERSO_COBRO
   WHERE ID_MOVIMIENTO = v_s.ID_MOVIMIENTO AND ESTADO='A';
  IF v_n > 0 THEN RAISE_APPLICATION_ERROR(-20991,'Este cobro ya fue reversado.'); END IF;
  SELECT COUNT(*) INTO v_n FROM WKSP_WORKPLACE.MOVIMIENTOS_CAJA
   WHERE ID_MOVIMIENTO_REVERSADO = v_s.ID_MOVIMIENTO;
  IF v_n > 0 THEN RAISE_APPLICATION_ERROR(-20991,'Este cobro ya tiene un egreso de reversion.'); END IF;
  IF v_mov.ID_CUENTA_COBRAR_DET IS NOT NULL THEN
    SELECT cd.ESTADO, cx.ESTADO INTO v_ecuo, v_ecxc
      FROM WKSP_WORKPLACE.CUENTAS_COBRAR_DET cd
      JOIN WKSP_WORKPLACE.CUENTAS_COBRAR     cx ON cx.ID_CXC = cd.ID_CXC
     WHERE cd.ID_DETALLE = v_mov.ID_CUENTA_COBRAR_DET;
    IF v_ecuo='ANULADA' OR v_ecxc='ANULADA' THEN
      RAISE_APPLICATION_ERROR(-20991,'La cuota o la cuenta asociada esta anulada; no se puede reversar.');
    END IF;
  END IF;
  v_nro_rec := v_mov.NRO_RECIBO;

  -- 3) Caja abierta del aprobador, del dia de hoy
  v_id_caja := WKSP_WORKPLACE.FN_CAJA_ABIERTA_USUARIO(p_usuario);
  IF v_id_caja IS NULL THEN
    RAISE_APPLICATION_ERROR(-20993,
      'Para aprobar un reverso necesitas tener caja abierta. Abri caja primero (P65).');
  END IF;
  SELECT FEC_APERTURA INTO v_fec_caja FROM WKSP_WORKPLACE.CAJAS WHERE ID_CAJA = v_id_caja;
  -- Fecha LOCAL (server UTC); FN_HOY evita el falso "no es del dia" despues de ~21hs.
  IF TRUNC(v_fec_caja) <> WKSP_WORKPLACE.FN_HOY THEN
    RAISE_APPLICATION_ERROR(-20994,
      'Tu caja abierta (#'||v_id_caja||') fue abierta el '||TO_CHAR(v_fec_caja,'DD/MM/YYYY')
      ||' y no corresponde al dia de hoy. Cerrala y abri una caja del dia.');
  END IF;

  -- 4) EGRESO de reversion (cabecera) en la caja del aprobador
  INSERT INTO WKSP_WORKPLACE.MOVIMIENTOS_CAJA (
    ID_CLIENTE, ID_CAJA, FECHA, TOTAL_MONEDA_LOCAL, MONEDA,
    TIPO_CAMBIO, TOTAL_MONEDA_ORIGEN, ESTADO, OBSERVACION,
    TIPO, USUARIO, ID_MOVIMIENTO_REVERSADO
  ) VALUES (
    v_mov.ID_CLIENTE, v_id_caja, WKSP_WORKPLACE.FN_AHORA, v_mov.TOTAL_MONEDA_LOCAL, v_mov.MONEDA,
    v_mov.TIPO_CAMBIO, v_mov.TOTAL_MONEDA_ORIGEN, 'A',
    'Reverso de cobro recibo '||NVL(v_nro_rec,'(s/n)')||' - '||v_s.MOTIVO,
    'EGRESO', p_usuario, v_mov.ID_MOVIMIENTO
  ) RETURNING ID_MOVIMIENTO INTO v_id_egreso;

  -- 4b) Detalle espejo (forma/metodo de pago del cobro original)
  INSERT INTO WKSP_WORKPLACE.DETALLE_MOVIMIENTO_CAJA (
    ID_MOVIMIENTO, ID_FORMA_PAGO, ID_METODO_PAGO,
    MONTO_LOCAL, MONTO_ORIGEN, MONEDA, TIPO_CAMBIO, NRO_REFERENCIA
  )
  SELECT v_id_egreso, ID_FORMA_PAGO, ID_METODO_PAGO,
         MONTO_LOCAL, MONTO_ORIGEN, MONEDA, TIPO_CAMBIO, NRO_REFERENCIA
    FROM WKSP_WORKPLACE.DETALLE_MOVIMIENTO_CAJA
   WHERE ID_MOVIMIENTO = v_mov.ID_MOVIMIENTO;

  -- 5) Reactivar la cuota
  IF v_mov.ID_CUENTA_COBRAR_DET IS NOT NULL THEN
    SELECT * INTO v_cuota FROM WKSP_WORKPLACE.CUENTAS_COBRAR_DET
     WHERE ID_DETALLE = v_mov.ID_CUENTA_COBRAR_DET FOR UPDATE;

    UPDATE WKSP_WORKPLACE.CUENTAS_COBRAR_DET
       SET ESTADO = CASE WHEN FECHA_VENCIMIENTO < WKSP_WORKPLACE.FN_HOY THEN 'VENCIDA' ELSE 'PENDIENTE' END
     WHERE ID_DETALLE = v_mov.ID_CUENTA_COBRAR_DET;

    -- 6) Subir el saldo de la CxC
    SELECT * INTO v_cxc FROM WKSP_WORKPLACE.CUENTAS_COBRAR
     WHERE ID_CXC = v_cuota.ID_CXC FOR UPDATE;

    v_nuevo_saldo := NVL(v_cxc.SALDO,0) + v_mov.TOTAL_MONEDA_LOCAL;
    IF v_nuevo_saldo > v_cxc.TOTAL_A_PAGAR + 0.01 THEN
      RAISE_APPLICATION_ERROR(-20995,
        'El reverso dejaria el saldo ('||v_nuevo_saldo||') por encima del total de la cuenta ('
        ||v_cxc.TOTAL_A_PAGAR||'). Revise el cobro.');
    END IF;

    UPDATE WKSP_WORKPLACE.CUENTAS_COBRAR
       SET SALDO = v_nuevo_saldo, ESTADO = 'PENDIENTE'
     WHERE ID_CXC = v_cxc.ID_CXC;
  END IF;

  -- 7) Cerrar la solicitud
  UPDATE WKSP_WORKPLACE.SOLICITUDES_REVERSO_COBRO
     SET ESTADO='A', USUARIO_APRUEBA=p_usuario, FECHA_RESOLUCION=WKSP_WORKPLACE.FN_AHORA,
         ID_MOVIMIENTO_EGRESO=v_id_egreso
   WHERE ID_SOLICITUD_RC = p_id_solicitud;
END PRC_APROBAR_REVERSO_COBRO;
/
show errors procedure PRC_APROBAR_REVERSO_COBRO

prompt == F15.7 PRC_RECHAZAR_REVERSO_COBRO ==
CREATE OR REPLACE PROCEDURE WKSP_WORKPLACE.PRC_RECHAZAR_REVERSO_COBRO (
  p_id_solicitud   IN NUMBER,
  p_motivo_rechazo IN VARCHAR2,
  p_usuario        IN VARCHAR2
) IS
  v_estado CHAR(1);
BEGIN
  IF p_usuario IS NULL THEN
    RAISE_APPLICATION_ERROR(-20997,'Usuario aprobador requerido.');
  END IF;
  IF p_motivo_rechazo IS NULL OR LENGTH(TRIM(p_motivo_rechazo)) < 10 THEN
    RAISE_APPLICATION_ERROR(-20998,'El motivo de rechazo debe tener al menos 10 caracteres.');
  END IF;

  SELECT ESTADO INTO v_estado FROM WKSP_WORKPLACE.SOLICITUDES_REVERSO_COBRO
   WHERE ID_SOLICITUD_RC = p_id_solicitud FOR UPDATE;
  IF v_estado <> 'P' THEN
    RAISE_APPLICATION_ERROR(-20996,'La solicitud no esta pendiente (ESTADO='||v_estado||').');
  END IF;

  UPDATE WKSP_WORKPLACE.SOLICITUDES_REVERSO_COBRO
     SET ESTADO='R', MOTIVO_RECHAZO=TRIM(p_motivo_rechazo),
         USUARIO_APRUEBA=p_usuario, FECHA_RESOLUCION=WKSP_WORKPLACE.FN_AHORA
   WHERE ID_SOLICITUD_RC = p_id_solicitud;
END PRC_RECHAZAR_REVERSO_COBRO;
/
show errors procedure PRC_RECHAZAR_REVERSO_COBRO

prompt == F15.8 V_SOLICITUDES_REVERSO (listado de aprobacion) ==
CREATE OR REPLACE VIEW WKSP_WORKPLACE.V_SOLICITUDES_REVERSO AS
SELECT s.ID_SOLICITUD_RC,
       s.ESTADO,
       s.MOTIVO,
       s.ID_MOVIMIENTO,
       mc.NRO_RECIBO,
       mc.FECHA              AS FECHA_COBRO,
       mc.TOTAL_MONEDA_LOCAL AS MONTO,
       mc.ID_CUENTA_COBRAR_DET,
       cd.ID_CXC,
       cd.NRO_CUOTA,
       cd.ESTADO             AS ESTADO_CUOTA,
       mc.ID_CLIENTE,
       TRIM(REGEXP_REPLACE(
         TRIM(BOTH ' ' FROM
           NVL(p.PRIMER_NOMBRE,'')||' '||NVL(p.SEGUNDO_NOMBRE,'')||' '||
           NVL(p.PRIMER_APELLIDO,'')||' '||NVL(p.SEGUNDO_APELLIDO,'')
         ), ' +', ' ')) AS CLIENTE_NOMBRE,
       s.USUARIO_SOLICITA, s.FECHA_SOLICITUD,
       s.USUARIO_APRUEBA, s.FECHA_RESOLUCION, s.MOTIVO_RECHAZO,
       s.ID_MOVIMIENTO_EGRESO
  FROM WKSP_WORKPLACE.SOLICITUDES_REVERSO_COBRO s
  JOIN WKSP_WORKPLACE.MOVIMIENTOS_CAJA mc ON mc.ID_MOVIMIENTO = s.ID_MOVIMIENTO
  LEFT JOIN WKSP_WORKPLACE.CUENTAS_COBRAR_DET cd ON cd.ID_DETALLE = mc.ID_CUENTA_COBRAR_DET
  LEFT JOIN WKSP_WORKPLACE.PERSONAS p ON p.ID_PERSONA = mc.ID_CLIENTE;

prompt == F15.9 Verificacion final ==
DECLARE
  v_cnt PLS_INTEGER;
  v_ok  BOOLEAN := TRUE;
  PROCEDURE chk_obj(p_name VARCHAR2, p_type VARCHAR2) IS
  BEGIN
    SELECT COUNT(*) INTO v_cnt FROM all_objects
     WHERE owner='WKSP_WORKPLACE' AND object_name=p_name AND object_type=p_type AND status='VALID';
    IF v_cnt=1 THEN DBMS_OUTPUT.PUT_LINE('  OK  '||RPAD(p_type,10)||' '||p_name);
    ELSE DBMS_OUTPUT.PUT_LINE('  FAIL '||RPAD(p_type,10)||' '||p_name||' (count='||v_cnt||')'); v_ok:=FALSE; END IF;
  END;
BEGIN
  -- columna + FK
  SELECT COUNT(*) INTO v_cnt FROM all_tab_columns
   WHERE owner='WKSP_WORKPLACE' AND table_name='MOVIMIENTOS_CAJA' AND column_name='ID_MOVIMIENTO_REVERSADO';
  IF v_cnt=1 THEN DBMS_OUTPUT.PUT_LINE('  OK  COLUMN     MOVIMIENTOS_CAJA.ID_MOVIMIENTO_REVERSADO');
  ELSE DBMS_OUTPUT.PUT_LINE('  FAIL COLUMN     MOVIMIENTOS_CAJA.ID_MOVIMIENTO_REVERSADO'); v_ok:=FALSE; END IF;

  SELECT COUNT(*) INTO v_cnt FROM all_tables
   WHERE owner='WKSP_WORKPLACE' AND table_name='SOLICITUDES_REVERSO_COBRO';
  IF v_cnt=1 THEN DBMS_OUTPUT.PUT_LINE('  OK  TABLE      SOLICITUDES_REVERSO_COBRO');
  ELSE DBMS_OUTPUT.PUT_LINE('  FAIL TABLE      SOLICITUDES_REVERSO_COBRO'); v_ok:=FALSE; END IF;

  SELECT COUNT(*) INTO v_cnt FROM all_indexes
   WHERE owner='WKSP_WORKPLACE' AND index_name='UQ_SRC_MOV_PEND';
  IF v_cnt=1 THEN DBMS_OUTPUT.PUT_LINE('  OK  INDEX      UQ_SRC_MOV_PEND');
  ELSE DBMS_OUTPUT.PUT_LINE('  FAIL INDEX      UQ_SRC_MOV_PEND'); v_ok:=FALSE; END IF;

  chk_obj('FN_COBRO_REVERSABLE',          'FUNCTION');
  chk_obj('PRC_SOLICITAR_REVERSO_COBRO',  'PROCEDURE');
  chk_obj('PRC_APROBAR_REVERSO_COBRO',    'PROCEDURE');
  chk_obj('PRC_RECHAZAR_REVERSO_COBRO',   'PROCEDURE');
  chk_obj('V_SOLICITUDES_REVERSO',        'VIEW');

  IF v_ok THEN DBMS_OUTPUT.PUT_LINE(CHR(10)||'F15 aplicado OK.');
  ELSE RAISE_APPLICATION_ERROR(-20999,'F15 verificacion FAIL.'); END IF;
END;
/

prompt == F15 - fin ==
set define on
ALTER SESSION SET CURRENT_SCHEMA = ADMIN;
